--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -3,10 +3,10 @@
       <div class = "row" style = "margin-top : 20px;">
         <div class = "col-md-6 offset-md-3">
           <div class="container text-center">
-            <img src="../../../assets/UdeA.png" width = "200" height = "200">
+            <img src="../../../assets/cc.jpg" width = "150" height = "150">
           </div>
   
-          <h1 class="text-center">Registrate aqui</h1>
+          <h1 class="text-center">Registrate aquí!</h1>
   
   
           <form (ngSubmit) = "formSubmit()">
